# next.js-1

./: Cargo.toml  package.json  pnpm-lock.yaml
crates/napi/src/: lib.rs
crates/next-core/src/: next_config.rs
crates/next-core/src/next_image/: module.rs  source_asset.rs
crates/next-core/src/next_shared/: resolve.rs
examples/blog-starter/: package.json
examples/with-apollo/: package.json
test/development/app-dir/segment-explorer/: segment-explorer.test.ts
turbopack/crates/turbo-rcstr/: Cargo.toml
turbopack/crates/turbo-rcstr/benches/: mod.rs
turbopack/crates/turbo-rcstr/src/: dynamic.rs  lib.rs
turbopack/crates/turbo-static/: Cargo.toml
turbopack/crates/turbo-tasks-build/src/: lib.rs
turbopack/crates/turbo-tasks-fetch/src/: lib.rs
turbopack/crates/turbo-tasks-fetch/tests/: fetch.rs
turbopack/crates/turbo-tasks-fs/src/: lib.rs
turbopack/crates/turbo-tasks-macros-tests/tests/value_trait/: fail_missing_function_annotation.rs  fail_missing_function_annotation.stderr
turbopack/crates/turbo-tasks-macros/src/: value_impl_macro.rs  value_trait_macro.rs
turbopack/crates/turbo-tasks-testing/tests/: trait_ref_cell.rs
turbopack/crates/turbo-tasks/src/: lib.rs  trait_ref.rs  value_type.rs
turbopack/crates/turbo-tasks/src/vc/: traits.rs
turbopack/crates/turbopack-core/: Cargo.toml
turbopack/crates/turbopack-core/src/: compile_time_info.rs
turbopack/crates/turbopack-core/src/issue/: mod.rs
turbopack/crates/turbopack-core/src/resolve/: mod.rs
turbopack/crates/turbopack-core/src/source_map/: mod.rs
turbopack/crates/turbopack-css/src/: process.rs
turbopack/crates/turbopack-dev-server/src/: lib.rs
turbopack/crates/turbopack-ecmascript/src/: lib.rs  parse.rs
turbopack/crates/turbopack-ecmascript/src/references/esm/: base.rs
turbopack/crates/turbopack-mdx/src/: lib.rs
turbopack/crates/turbopack-node/src/render/: render_proxy.rs
turbopack/crates/turbopack-node/src/source_map/: trace.rs
turbopack/crates/turbopack-node/src/transforms/: postcss.rs
turbopack/crates/turbopack-tests/tests/: execution.rs
turbopack/crates/turbopack/src/: lib.rs
turbopack/crates/turbopack/tests/: node-file-trace.rs
turbopack/crates/turbopack/tests/node-file-trace/: package.json  pnpm-lock.yaml
